fix vertical align of undo/redo buttons when in loading state

--- a/frontend/stylesheets/_utils.less
+++ b/frontend/stylesheets/_utils.less
@@ -156,3 +156,11 @@ td.nowrap * {
   cursor: grabbing !important;
   user-select: none;
 }
+
+.zero-vertical-align {
+  // This class is currently only used as a fix for the undo/redo buttons.
+  // Without it, their vertical align gets messed up when the buttons turns
+  // into a loading state (then, .ant-btn-icon-only is active which uses
+  // vertical-align: -3px)
+  vertical-align: 0;
+}
